  "short_description" and "long_description" respectively, so as to match 
  EquipmentInfo specification.
* equipment.plist: hide_values allows an equipment item to hide the cost and 
  install time values on the F3 Ship Outfitting screen.
* equipment.plist: purchase_sort_order allows the sorting of the F3 Ship Outfitting
  screen to be sorted independently of the F5 Status screen.
  
Scripting:
----------
* Added world event consoleMessageReceived.
* ship.canAwardEquipment now accepts optional additional parameter of "context", 
  enabling checking of any context for the equipment item.
* Added player.ship.previousSystem property, which contains the system ID of 
  where the player as jumped from.
* shipWillExitWitchspace and shipExitedWitchspace world events now include the 
  jump cause parameter.
* Added beginGalacticHyperspaceCountdown world event.
* Added global functions setExtraGuiScreenKeys and clearExtraGuiScreenKeys.
* Added registerKeys property to mission screen object, allowing additional key
  presses to be defined.
* Added planet.illuminationColor property.
* Added planet.airDensity property.
* Added Ship.setShipInfoForKey to allow for shipdata updates during the game.
* Added equipment.weaponInfo dictionary.

Bug Fixes:
==========
* Splinters that have a defined cargo will now spawn with that, instead of 
  defaulting to minerals.
* Fixed issue where destination ID was not being passed to shipWillEnterWitchspace
  when the player is docked with another vessel.
* (Mac build) Fixed possible memory leak.
* Fixed some JS errors in oolite-populator.js and priorityAI.js.
* Fixed issue where hyperspace destination on the status screen and the witchspace
  destination HUD element were not honouring the system concealment property.
* Added guard against NaNs in the atmosphere shader with large planets.
* Fixed "index out of range" error that can occur if a HUD did not define MFD's
  and player tried to select one.