@@ -86,6 +86,8 @@ MA 02110-1301, USA.
    - (void) setGuiToKeyboardLayoutScreen:(unsigned)skip resetCurrentRow:(BOOL)resetCurrentRow;
    - (void) handleKeyboardLayoutEntryKeys:(GuiDisplayGen *)gui view:(MyOpenGLView *)gameView;
 
+   - (NSString *)validateKey:(NSString*)key checkKeys:(NSArray*)check_keys;
+
    - (NSDictionary *)makeKeyGuiDict:(NSString *)what keyDef:(NSString *)keyDef;
    - (NSDictionary *)makeKeyGuiDictHeader:(NSString *)header;
 
